# libalgo

./: .gitignore  .project  INSTALL  Makefile.am  README.md  configure.ac
source/: tangent_function.xlsx
src/: Makefile.am
src/algorithms/angle3points/: Angle3Points.h  Angle3Points.hpp
src/algorithms/arithmeticparser/: ArithmeticParser.hpp
src/algorithms/bearing/: Bearing.hpp
src/algorithms/bisection/: Bisection.h
src/algorithms/bisector/: Bisector.h  Bisector.hpp
src/algorithms/cartanalysis/: CartAnalysis.h  CartAnalysis.hpp
src/algorithms/cartdistortion/: CartDistortion.h  CartDistortion.hpp
src/algorithms/carttransformation/: CartTransformation.h  CartTransformation.hpp
src/algorithms/circle3points/: Circle3Points.hpp
src/algorithms/convexhull/: ConvexHull.h  ConvexHull.hpp
src/algorithms/convexquadrilateral/: ConvexQuadrilateral.h  ConvexQuadrilateral.hpp
src/algorithms/eucldistance/: EuclDistance.h
src/algorithms/facearea/: FaceArea.h  FaceArea.hpp
src/algorithms/faceoverlay/: FaceOverlay.h  FaceOverlay.hpp
src/algorithms/faceperimeter/: FacePerimeter.hpp
src/algorithms/geneticalgorithms/: DifferentialEvolution.hpp  FAnalyzeProjV2DE.h  FAnalyzeProjV2DEL.h  FAnalyzeProjV3DE.h  FAnalyzeProjV4DE.h  FAnalyzeProjV4DEL.h  FAnalyzeProjVDE.h
src/algorithms/graphalgorithms/: GraphAlgorithms.h  GraphAlgorithms.hpp
src/algorithms/graticule/: Graticule.h  Graticule.hpp
src/algorithms/innerdistance/: InnerDistance.h  InnerDistance.hpp
src/algorithms/lawsonorientedwalk/: LawsonOrientedWalk.h  LawsonOrientedWalk.hpp
src/algorithms/leastsquaresfitting/: LeastSquaresFitting.h  LeastSquaresFitting.hpp
src/algorithms/linelineangle/: LineLineAngle.hpp
src/algorithms/linelineposition/: LineLinePosition.h  LineLinePosition.hpp
src/algorithms/matrixoperations/: MatrixOperations.h  MatrixOperations.hpp
src/algorithms/nndistance/: NNDistance.h  NNDistance.hpp
src/algorithms/nonlinearleastsquares/: FAnalyzeProjC.h  FAnalyzeProjJ.h  FAnalyzeProjJ2.h  FAnalyzeProjJ3.h  FAnalyzeProjJ3R.h  FAnalyzeProjJ4.h  FAnalyzeProjV.h  FAnalyzeProjV2.h  FAnalyzeProjV3.h  FAnalyzeProjV3R.cpp  FAnalyzeProjV4.h  NonLinearLeastSquares.h  NonLinearLeastSquares.hpp
src/algorithms/numderivative/: FProjEquationDerivative1Var.h  FProjEquationDerivative2Var.h  FProjEquationDerivative5Var.h  FProjEquationDerivative6Var.h  NumDerivative.h  NumDerivative.hpp
src/algorithms/outliers/: Outliers.h
src/algorithms/pointellipseposition/: PointEllipsePosition.hpp
src/algorithms/pointfaceposition/: PointFacePosition.h  PointFacePosition.hpp
src/algorithms/pointlinedistance/: PointLineDistance.hpp
src/algorithms/pointlineposition/: PointLinePosition.h  PointLinePosition.hpp
src/algorithms/polylinelength/: PolyLineLength.h  PolyLineLength.hpp
src/algorithms/projectiontoproj4/: ProjectionToProj4.hpp
src/algorithms/randompermutation/: RandomPermutation.h
src/algorithms/ransac/: Ransac.h  Ransac.hpp
src/algorithms/shapecontext/: ShapeContext.h  ShapeContext.hpp
src/algorithms/simpleface/: SimpleFace.hpp
src/algorithms/simplexmethod/: FAnalyzeProjV2S.h  FAnalyzeProjV3S.h  FAnalyzeProjV4S.h  FAnalyzeProjVS.h  SimplexMethod.h
src/algorithms/swappingcriteria/: SwappingCriteria.hpp
src/algorithms/tangentfunction/: TangentFunction.hpp
src/algorithms/tarcriterion/: TARCriterion.hpp
src/algorithms/transformation/: HelmertTransformation2D.h  HelmertTransformation2D.hpp  HomotheticTransformation2D.h  HomotheticTransformation2D.hpp  Transformation2D.h  Transformation2D.hpp
src/algorithms/triangulations2D/: CDT2D.h  CDT2D.hpp  DDT2D.h  DDT2D.hpp  DT2D.h  DT2D.hpp
src/algorithms/turningfunction/: TurningFunction.h  TurningFunction.hpp
src/algorithms/vectorvectororientation/: VectorVectorOrientation.hpp
src/algorithms/voronoi2D/: Voronoi2D.h  Voronoi2D.hpp
src/comparators/: findMeridianParallelPointIndices.h  getResidualXY.h  isEqualMeridianParallelPointIndex.h  removeProjectionPolePositions.h  removeSimplexHalfEdge.h  removeUnequalMeridianParallelPointIndices.h  sortFittingLinesByHash.h  sortPointPairsByIndices.h  sortPointPairsByResiduals.h  sortPointsByGravityCenterDistance.h  sortPointsByLat.h  sortPointsByLon.h  sortPointsByX.h  sortPointsByY.h  sortPointsIndicesByX.h  sortPointsIndicesByY.h  sortProjectionPolePositionsByCompCriterium.h  sortProjectionPolePositionsByLat.h  sortSamplesByAllRatios.h
src/exceptions/: ErrorMathInvalidArgument.h  ErrorMathMatrix.h  ErrorMathOverflow.cpp  ErrorParse.h
src/io/: DXFExport.h  DXFExport.hpp  File.cpp  File.h
src/libalgo/source/algorithms/arithmeticparser/: ArithmeticParser.cpp  ArithmeticParser.h  ArithmeticParser.hpp
src/libalgo/source/algorithms/bearing/: Bearing.hpp
src/libalgo/source/algorithms/bisector/: Bisector.hpp
src/libalgo/source/algorithms/cartanalysis/: CartAnalysis.h  CartAnalysis.hpp
src/libalgo/source/comparators/: sortSamplesByAllRatios.h.bak
src/libalgo/source/exceptions/: ErrorBadCast.cpp  ErrorBadData.cpp  ErrorFileRead.cpp  ErrorFileWrite.h  ErrorIndexOutOfBound.cpp  ErrorMathAmbiguousValue.cpp  ErrorMathMatrixNotPositiveDefinite.h  ErrorMathMatrixSquare.cpp  ErrorMathRange.cpp  ErrorMathRange.h  ErrorMathUnderflow.cpp  ErrorParse.cpp
src/libalgo/source/io/: DXFExport.h  DXFExport.hpp  File.cpp  Format.hpp  GeoJSONExport.h  GeoJSONExport.hpp
src/structures/face/: Face.h  Face.hpp  VoronoiCell.hpp
src/structures/graph/: Graph.h  GraphM.h
src/structures/line/: HalfEdge.hpp  Meridian.h  Meridian.hpp  Parallel.h  Parallel.hpp  PolyLine.h  PolyLine.hpp
src/structures/list/: Container.hpp  GenericContainer2.hpp
src/structures/matrix/: Matrix.hpp
src/structures/point/: Node3DCartesian.h  Node3DCartesian.hpp  Node3DCartesianProjected.h  Point3DCartesian.hpp  Point3DCartesianProjected.h  Point3DCartesianProjected.hpp  Point3DGeographic.hpp
src/structures/projection/: Projection.h  ProjectionAzimuthal.h  ProjectionConic.h  ProjectionCylindrical.h  ProjectionPolyConicLimits.cpp  ProjectionPseudoCylindrical.h  Sample.h  Sample.hpp
src/structures/tree/: KDTree.h  KDTree.hpp
(+283 files in other folders)
