AUTOMAKE_OPTIONS = foreign

CFLAGS = --pedantic -Wall -std=c99 -O2
ACLOCAL_AMFLAGS = -I m4

lib_LTLIBRARIES = libalgo.la

libalgo_la_SOURCES = ./libalgo/source/comparators/getFirstElementInPair.cpp\
    ./libalgo/source/comparators/sortSamplesByGNTurningFunctionRatio.cpp\
    ./libalgo/source/comparators/sortPointPairsByIndices.cpp\
    ./libalgo/source/comparators/sortPointsByLat.cpp\
    ./libalgo/source/comparators/findMeridianParallelPointIndices.cpp\
    ./libalgo/source/comparators/sortPointsIndicesByX.cpp\
    ./libalgo/source/comparators/sortSamplesByAngularDifferencesRatio.cpp\
    ./libalgo/source/comparators/sortSamplesBySphereOfInfluenceGraphRatio.cpp\
    ./libalgo/source/comparators/sortMeridiansByLon.cpp\
    ./libalgo/source/comparators/sortSamplesByVoronoiCellAreaLengthRatio.cpp\
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTARRatio.cpp\
    ./libalgo/source/comparators/addValueToItems.cpp\
    ./libalgo/source/comparators/removeSimplexHalfEdge.cpp\
    ./libalgo/source/comparators/getResidualXY.cpp\
    ./libalgo/source/comparators/sortProjectionAspectsByCompCriterium.cpp\
    ./libalgo/source/comparators/sortPointPairsByDeviation.cpp\
    ./libalgo/source/comparators/sortFittingLinesByHash.cpp\
    ./libalgo/source/comparators/isEqualMeridianParallelPointIndex.cpp\
    ./libalgo/source/comparators/sortSamplesByAverageNearestNeighbourDistanceRatio.cpp\
    ./libalgo/source/comparators/removeUnequalMeridianParallelPointIndices.cpp\
    ./libalgo/source/comparators/sortSamplesByCrossNearestNeighbourDistanceRatio.cpp\
    ./libalgo/source/comparators/sortPointsToBins.cpp\
    ./libalgo/source/comparators/sortSamplesByHomotheticTransformationRatio.cpp\
    ./libalgo/source/comparators/getSecondElementInPair.cpp\
    ./libalgo/source/comparators/sortSamplesByTurningFunctionRatio.cpp\
    ./libalgo/source/comparators/sortPointsByY.cpp\
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTangentFunctionRatio.cpp\
    ./libalgo/source/comparators/removeProjectionPolePositions.cpp\
    ./libalgo/source/comparators/sortProjectionPolePositionsByLat.cpp\
    ./libalgo/source/comparators/sortSamplesByTangentFunctionRatio.cpp\
    ./libalgo/source/comparators/sortParallelsByLat.cpp\
    ./libalgo/source/comparators/indexComp.cpp\
    ./libalgo/source/comparators/sortPointPairsByResiduals.cpp\
    ./libalgo/source/comparators/sortProjectionPolePositionsByCompCriterium.cpp\
    ./libalgo/source/comparators/isEqualPointByPlanarCoordinates.cpp\
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTARRatioPosition.cpp\
    ./libalgo/source/comparators/sortPointsByID.cpp\
    ./libalgo/source/comparators/sortSamplesByAllRatios.cpp\
    ./libalgo/source/comparators/sortPointsByGravityCenterDistance.cpp\
    ./libalgo/source/comparators/sortPointsByLon.cpp\
    ./libalgo/source/comparators/sortSamplesByHelmertTransformationRatio.cpp\
    ./libalgo/source/comparators/sortPointsIndicesByY.cpp\
    ./libalgo/source/comparators/sortSamplesByVoronoiCellTurningFunctionRatio.cpp\
    ./libalgo/source/comparators/sortSamplesByGabrielGraphRatio.cpp\
    ./libalgo/source/comparators/sortPointsByX.cpp\
    ./libalgo/source/comparators/sortKDNodesByPriority.cpp\
    ./libalgo/source/comparators/sortSamplesByNNNGraphRatio.cpp\
    ./libalgo/source/comparators/sortSamplesByVoronoiCellInnerDistanceRatio.cpp\
    ./libalgo/source/comparators/sortProjectionAspectsByCartPole.cpp\
    ./libalgo/source/exceptions/ErrorParse.cpp\
    ./libalgo/source/exceptions/ErrorMathMatrix.cpp\
    ./libalgo/source/exceptions/ErrorMathZeroDevision.cpp\
    ./libalgo/source/exceptions/ErrorMathAmbiguousValue.cpp\
    ./libalgo/source/exceptions/ErrorMathInvalidArgument.cpp\
    ./libalgo/source/exceptions/ErrorMathUnderflow.cpp\
    ./libalgo/source/exceptions/ErrorMathMatrixDifferentSize.cpp\
    ./libalgo/source/exceptions/ErrorBadData.cpp\
    ./libalgo/source/exceptions/ErrorIndexOutOfBound.cpp\
    ./libalgo/source/exceptions/ErrorFileWrite.cpp\
    ./libalgo/source/exceptions/ErrorFileRead.cpp\
    ./libalgo/source/exceptions/ErrorMathMatrixNotPositiveDefinite.cpp\
    ./libalgo/source/exceptions/Error.cpp\
    ./libalgo/source/exceptions/ErrorMathMatrixSquare.cpp\
    ./libalgo/source/exceptions/ErrorBadOutput.cpp\
    ./libalgo/source/exceptions/ErrorMathMatrixNotSquare.cpp\
    ./libalgo/source/exceptions/ErrorMathMatrixSingular.cpp\
    ./libalgo/source/exceptions/ErrorMathOverflow.cpp\
    ./libalgo/source/exceptions/ErrorMathRange.cpp\
    ./libalgo/source/exceptions/ErrorMath.cpp\
    ./libalgo/source/exceptions/ErrorBadCast.cpp\
    ./libalgo/source/algorithms/linelineangle/LineLineAngle.cpp\
    ./libalgo/source/algorithms/shapecontext/ShapeContext.cpp\
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV4S.cpp\
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV2SCND.cpp\
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjVS.cpp\
    ./libalgo/source/algorithms/simplexmethod/SimplexMethod.cpp\
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV3S.cpp\
    ./libalgo/source/algorithms/simplexmethod/FAnalyzeProjV2S.cpp\
    ./libalgo/source/algorithms/arithmeticparser/ArithmeticParser.cpp\
    ./libalgo/source/algorithms/simpleface/SimpleFace.cpp\
    ./libalgo/source/algorithms/circle3points/Circle3Points.cpp\
    ./libalgo/source/algorithms/bisector/Bisector.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/NonLinearLeastSquares.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV3.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV3R.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ2.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV2CND.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjC.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjL.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjB3R.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ3R.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ4.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV2.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjV4.cpp\
    ./libalgo/source/algorithms/nonlinearleastsquares/FAnalyzeProjJ3.cpp\
    ./libalgo/source/algorithms/lawsonorientedwalk/LawsonOrientedWalk.cpp\
    ./libalgo/source/algorithms/pointbetweenpoints/PointBetweenPoints.cpp\
    ./libalgo/source/algorithms/pointfaceposition/PointFacePosition.cpp\
    ./libalgo/source/algorithms/transformation/HelmertTransformation2D.cpp\
    ./libalgo/source/algorithms/transformation/HomotheticTransformation2D.cpp\
    ./libalgo/source/algorithms/transformation/Transformation2D.cpp\
    ./libalgo/source/algorithms/matrixoperations/MatrixOperations.cpp\
    ./libalgo/source/algorithms/leastsquaresfitting/LeastSquaresFitting.cpp\
    ./libalgo/source/algorithms/translate/Translate.cpp\
    ./libalgo/source/algorithms/turningfunction/TurningFunction.cpp\
    ./libalgo/source/algorithms/swappingcriteria/SwappingCriteria.cpp\
    ./libalgo/source/algorithms/facearea/FaceArea.cpp\
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative2Var.cpp\
    ./libalgo/source/algorithms/numderivative/NumDerivative.cpp\
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative6VarR.cpp\
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative5Var.cpp\
    ./libalgo/source/algorithms/numderivative/FProjEquationDerivative6Var.cpp\
    ./libalgo/source/algorithms/pointellipseposition/PointEllipsePosition.cpp\
    ./libalgo/source/algorithms/ransac/Ransac.cpp\
    ./libalgo/source/algorithms/graticule/Graticule.cpp\
    ./libalgo/source/algorithms/nndistance/NNDistance.cpp\
    ./libalgo/source/algorithms/faceperimeter/FacePerimeter.cpp\
    ./libalgo/source/algorithms/pointlinedistance/PointLineDistance.cpp\
    ./libalgo/source/algorithms/polylinelength/PolyLineLength.cpp\
    ./libalgo/source/algorithms/voronoi2D/Voronoi2D.cpp\
    ./libalgo/source/algorithms/bearing/Bearing.cpp\
    ./libalgo/source/algorithms/faceoverlay/FaceOverlay.cpp\
    ./libalgo/source/algorithms/innerdistance/InnerDistance.cpp\
    ./libalgo/source/algorithms/tarcriterion/TARCriterion.cpp\
    ./libalgo/source/algorithms/triangulations2D/CDT2D.cpp\
    ./libalgo/source/algorithms/triangulations2D/DT2D.cpp\
    ./libalgo/source/algorithms/triangulations2D/DDT2D.cpp\
    ./libalgo/source/algorithms/tangentfunction/TangentFunction.cpp\
    ./libalgo/source/algorithms/round/Round.cpp\
    ./libalgo/source/algorithms/outliers/Outliers.cpp\
    ./libalgo/source/algorithms/convexhull/ConvexHull.cpp\
    ./libalgo/source/algorithms/cartanalysis/CartAnalysis.cpp\
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV4DE.cpp\
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV2DE.cpp\
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjVDE.cpp\
    ./libalgo/source/algorithms/geneticalgorithms/DifferentialEvolution.cpp\
    ./libalgo/source/algorithms/geneticalgorithms/FAnalyzeProjV3DE.cpp\
    ./libalgo/source/algorithms/carttransformation/CartTransformation.cpp\
    ./libalgo/source/algorithms/linelineposition/LineLinePosition.cpp\
    ./libalgo/source/algorithms/trianglearea/TriangleArea.cpp\
    ./libalgo/source/algorithms/pointlineposition/PointLinePosition.cpp\
    ./libalgo/source/algorithms/hash/Hash.cpp\
    ./libalgo/source/algorithms/graphalgorithms/GraphAlgorithms.cpp\
    ./libalgo/source/algorithms/cartdistortion/CartDistortion.cpp\
    ./libalgo/source/algorithms/convexquadrilateral/ConvexQuadrilateral.cpp\
    ./libalgo/source/algorithms/vectorvectororientation/VectorVectorOrientation.cpp\
    ./libalgo/source/algorithms/angle3points/Angle3Points.cpp\
    ./libalgo/source/algorithms/eucldistance/EuclDistance.cpp\
    ./libalgo/source/structures/point/Point3DGeographic.cpp\
    ./libalgo/source/structures/point/Node3DCartesianProjected.cpp\
    ./libalgo/source/structures/point/Point3DCartesian.cpp\
    ./libalgo/source/structures/point/Point3DCartesianProjected.cpp\
    ./libalgo/source/structures/point/Node3DCartesian.cpp\
    ./libalgo/source/structures/projection/ProjectionPseudoConic.cpp\
    ./libalgo/source/structures/projection/ProjectionConicLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionPseudoAzimuthal.cpp\
    ./libalgo/source/structures/projection/ProjectionPolyConicLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionPseudoConicLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionAzimuthal.cpp\
    ./libalgo/source/structures/projection/ProjectionPseudoCylindrical.cpp\
    ./libalgo/source/structures/projection/ProjectionAzimuthalLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionLimits.cpp\
    ./libalgo/source/structures/projection/Projection.cpp\
    ./libalgo/source/structures/projection/Limits.cpp\
    ./libalgo/source/structures/projection/ProjectionMiscellaneous.cpp\
    ./libalgo/source/structures/projection/ProjectionCylindrical.cpp\
    ./libalgo/source/structures/projection/Sample.cpp\
    ./libalgo/source/structures/projection/ProjectionEllipsoidalLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionCylindricalLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionPolyConic.cpp\
    ./libalgo/source/structures/projection/ProjectionConic.cpp\
    ./libalgo/source/structures/projection/ProjectionPseudoCylindricalLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionPseudoAzimuthalLimits.cpp\
    ./libalgo/source/structures/projection/ProjectionEllipsoidal.cpp\
    ./libalgo/source/structures/projection/ProjectionMiscellaneousLimits.cpp\
    ./libalgo/source/structures/line/Parallel.cpp\
    ./libalgo/source/structures/line/HalfEdge.cpp\
    ./libalgo/source/structures/line/Edge.cpp\
    ./libalgo/source/structures/line/PolyLine.cpp\
    ./libalgo/source/structures/line/Meridian.cpp\
    ./libalgo/source/structures/matrix/Matrix.cpp\
    ./libalgo/source/structures/tree/KDNode.cpp\
    ./libalgo/source/structures/tree/KDTree.cpp\
    ./libalgo/source/structures/graph/GraphL.cpp\
    ./libalgo/source/structures/graph/GraphEdgeA.cpp\
    ./libalgo/source/structures/graph/GraphM.cpp\
    ./libalgo/source/structures/graph/Graph.cpp\
    ./libalgo/source/structures/graph/GraphEdge.cpp\
    ./libalgo/source/structures/graph/GraphA.cpp\
    ./libalgo/source/structures/list/Container.cpp\
    ./libalgo/source/structures/list/GenericContainer2.cpp\
    ./libalgo/source/structures/list/GenericContainer.cpp\
    ./libalgo/source/structures/face/VoronoiCell.cpp\
    ./libalgo/source/structures/face/Face.cpp\
    ./libalgo/source/io/File.cpp\
    ./libalgo/source/io/Format.cpp\
    ./libalgo/source/io/DXFExport.cpp
